Move images to img folder, update QR Code

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -59,6 +59,11 @@ button {
     width: 1.2em;
     height: 1.2em; }
 
+#qrcode {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
 #qrcode img {
   max-width: 60vw;
   max-height: 60vh; }
