--- a/docs/css/style.scss
+++ b/docs/css/style.scss
@@ -131,8 +131,9 @@ button {
 
   max-width: 50em !important;
   padding: 10px 20px;
+
   h1 {
-    margin-top:0;
+    margin-top: 0;
   }
 }
 
@@ -142,7 +143,7 @@ button {
 }
 
 form .row {
-  margin: 10px 0 30px 0;
+  margin: 0 0 15px 0;
 
   label {
     margin-right: 10px;
@@ -150,16 +151,16 @@ form .row {
 }
 
 #addeditformwrapper {
-  padding: 30px;
+  padding: 20px 20px 10px;
   border-radius: 10px;
 }
 
 .buttons-row {
   margin-top: 20px;
-  border-top: 1px solid #333;
-  padding-top: 20px;
+  border-top: 1px solid #aaa;
+  padding-top: 10px;
   display: flex;
-  gap: 20px;
+  gap: 10px;
   align-content: center;
   justify-content: flex-end;
 
