--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -170,7 +170,7 @@ h1 .buttons {
 .passThruMessage {
   position: absolute;
   font-size: 0.8rem;
-  bottom: -30px;
+  bottom: -20px;
   left: 0;
   background: rgba(155, 244, 85, 0.5);
   border: 2px solid #a8a348;
@@ -186,7 +186,7 @@ h1 .buttons {
 .f-button.is-arrow {
   display: none !important; }
 
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
   h1 {
     margin-top: 30px; }
 
@@ -204,6 +204,13 @@ h1 .buttons {
       width: 100% !important; }
 
   .tabs .tab.filter.active {
-    border: 1px solid black; } }
+    border: 1px solid black; }
+
+  .passThruMessage {
+    position: fixed;
+    font-size: 0.8rem;
+    top: 5px;
+    left: 5px;
+    bottom: unset; } }
 
 /*# sourceMappingURL=style.css.map */
