--- a/docs/css/style.scss
+++ b/docs/css/style.scss
@@ -230,7 +230,7 @@ h1 .buttons {
 .passThruMessage {
   position: absolute;
   font-size: 0.8rem;
-  bottom: -30px;
+  bottom: -20px;
   left: 0;
   background: rgba(155, 244, 85, 0.5);
   border: 2px solid #a8a348;
@@ -249,7 +249,7 @@ h1 .buttons {
   display: none !important;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
   h1 {
     margin-top: 30px;
   }
@@ -270,5 +270,12 @@ h1 .buttons {
   }
   .tabs .tab.filter.active {
     border: 1px solid black;
+  }
+  .passThruMessage {
+    position: fixed;
+  font-size: 0.8rem;
+  top: 5px;
+  left: 5px;
+    bottom: unset;
   }
 }
