--- a/docs/css/style.scss
+++ b/docs/css/style.scss
@@ -15,26 +15,39 @@
       border-radius: 10px 10px 0 0;
       z-index: 2;
       cursor: pointer;
-
+      height: 1.8em;
+      border-bottom: none;
+      box-sizing: border-box;
     }
 
     > div.active {
       border: 2px solid black;
       border-bottom: 2px solid white;
       background: white;
+      font-weight: bold;
 
     }
 
     > div.filter {
-      padding: 0 5px 3px;
+      padding: 4px 5px 3px;
       display: flex;
       align-items: flex-end;
+      width: 9em;
 
       input {
-        border: 0;
+        position: absolute;
+        border: 3px solid transparent;
         width: 8em;
         font-size: 1em;
+        margin-bottom: 0;
+        border-radius: 5px 5px 0 0;
+        background: transparent;
+        box-sizing: border-box;
+        max-height: 1.2em;
       }
+    }
+    >div.filter.active input {
+      margin-bottom: -2px;
     }
   }
 
