Responsive style fixes

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -136,6 +136,12 @@ form .row {
   .buttons-row button {
     font-size: 1em; }
 
+#permits-header {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  flex-wrap: wrap; }
+
 #permits-list {
   display: flex;
   flex-direction: column; }
@@ -152,7 +158,10 @@ h1 {
   position: relative; }
 
 h1 .buttons {
-  display: inline-block; }
+  display: inline-flex;
+  gap: 10px;
+  align-items: center;
+  flex-wrap: wrap; }
 
 .entry-numberplate {
   color: blue;
@@ -200,6 +209,10 @@ h1 .buttons {
 .f-button.is-arrow {
   display: none !important; }
 
+@media (max-width: 322px) {
+  h1 .buttons {
+    margin-top: -18px;
+    padding-bottom: 10px; } }
 @media (max-width: 768px) {
   h1 {
     margin-top: 30px; }
